{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 21,
  "lineage": "43b01cd1-77c3-c933-34de-e430c588c65c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0df7620ca7646953a",
            "owner_id": "457615832131",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-06de254b746ba00ee"
          },
          "depends_on": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-022dabf1f578616b5",
            "owner_id": "457615832131",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df7620ca7646953a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-06de254b746ba00ee"
          },
          "depends_on": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03026e7f4c56216c6",
            "route_table_id": "rtb-022dabf1f578616b5",
            "subnet_id": "subnet-0e5a767e8b7a64509"
          },
          "depends_on": [
            "aws_route_table.demo",
            "aws_subnet.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b034a359e3797c1c",
            "route_table_id": "rtb-022dabf1f578616b5",
            "subnet_id": "subnet-0fc1bb70ca54778c0"
          },
          "depends_on": [
            "aws_route_table.demo",
            "aws_subnet.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:457615832131:security-group/sg-079e87b9e7744c245",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079e87b9e7744c245",
            "ingress": [
              {
                "cidr_blocks": [
                  "119.18.1.91/32"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": null,
            "owner_id": "457615832131",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-06de254b746ba00ee"
          },
          "depends_on": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "119.18.1.91/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-500521593",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079e87b9e7744c245",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.demo-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:457615832131:subnet/subnet-0e5a767e8b7a64509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e5a767e8b7a64509",
            "map_public_ip_on_launch": false,
            "owner_id": "457615832131",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-06de254b746ba00ee"
          },
          "depends_on": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:457615832131:subnet/subnet-0fc1bb70ca54778c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fc1bb70ca54778c0",
            "map_public_ip_on_launch": false,
            "owner_id": "457615832131",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-06de254b746ba00ee"
          },
          "depends_on": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:457615832131:vpc/vpc-06de254b746ba00ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7c19472120321a6",
            "default_route_table_id": "rtb-03ef9ed0c2eb61a6e",
            "default_security_group_id": "sg-07b544e263f8a23fb",
            "dhcp_options_id": "dopt-23f9f346",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06de254b746ba00ee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03ef9ed0c2eb61a6e",
            "owner_id": "457615832131",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}